--- a/backend-dialysis-record/src/main/resources/application.properties
+++ b/backend-dialysis-record/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
+
+security.jwt.secret=c2VjcmV0X2tleV9qd3RfZXhhbXBsZV8xMjM0NTY3ODkw
+security.jwt.access-minutes=30
+security.jwt.issuer=dialysis-record
