feat(security): add ownership auth and /doctors/me endpoints
- Add AuthzService doctor ownership checks
- Secure Doctor/Patient/Session controllers with @PreAuthorize
- Introduce /api/doctors/me and self patient management endpoints
- Enforce patient-scoped session creation and restrict admin-only endpoints

--- a/backend-dialysis-record/src/main/resources/application.properties
+++ b/backend-dialysis-record/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.properties.hibernate.default_schema=public
 
 security.jwt.secret=c2VjcmV0X2tleV9qd3RfZXhhbXBsZV8xMjM0NTY3ODkw
 security.jwt.access-minutes=30
+security.jwt.refresh-days=14
+security.jwt.refresh-bytes=64
 security.jwt.issuer=dialysis-record
